--- a/app.css
+++ b/app.css
@@ -208,7 +208,7 @@ a:focus {
 }
 
 /* ******************** */
-/* SNOW */
+/* ZIEMA */
 /* ******************** */
 
 #snowflakeContainer {
@@ -230,7 +230,7 @@ a:focus {
 }
 
 /* ******************** */
-/* LEAVES */
+/* PAVASARIS */
 /* ******************** */
 
 .falling-leaves {
@@ -241,6 +241,7 @@ a:focus {
     width: 100%;
     transform: translate(-50%, 0);
     z-index: -3000;
+    overflow: hidden;
 }
 .leaf-scene {
     position: absolute;
@@ -262,4 +263,19 @@ a:focus {
     background-size: 100%;
     transform-style: preserve-3d;
     backface-visibility: visible;
+}
+
+/* ******************** */
+/* RUDENS */
+/* ******************** */
+
+#box {
+    position: fixed;
+    left: 0;
+    width: 100%;
+    height: 200vh;
+    z-index: -99;
+}
+#canvas {
+    transform: rotate(6deg);
 }
